# sonar-funnel

./: .env.example  .gitignore  README.md  pyproject.toml
src/sonar_funnel/: agent.py  main.py  models.py  pylon_source.py  retry.py  slack_report.py
